syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.models";

  message WithdrawRequest {
    int32 accountNumber = 1;
    int32 amount = 2;
  }

  message Money {
    int32 value = 1;
    int32 remainingValue = 2;
  }

  service BankService{
    //server-side streaming
    rpc withdraw(WithdrawRequest) returns(stream Money);
  }


